--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "android": "expo start --android",
     "ios": "expo start --ios",
     "eject": "expo eject",
-    "test": "node ./node_modules/jest/bin/jest.js --watchAll"
+    "test": "mocha"
   },
   "jest": {
     "preset": "jest-expo"
@@ -21,6 +21,9 @@
   },
   "devDependencies": {
     "babel-preset-expo": "^5.0.0",
-    "jest-expo": "^31.0.0"
+    "chai": "^4.2.0",
+    "expo-cli": "^2.3.8",
+    "jest-expo": "^31.0.0",
+    "mocha": "^5.2.0"
   }
 }
